# beacon

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: clippy-fmt.yml  docker-img.yml  release.yml
src/: handler.rs  main.rs  request.rs  response.rs  room.rs
