[package]
name = "beacon"
version = "0.1.0"
authors = ["Bastien de Luca <dev@de-luca.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.8"
tokio = { version = "1.5.0", features = ["full"] }
tokio-rustls = "0.22"
tokio-tungstenite = "0.14"
futures-channel = "0.3"
futures-util = "0.3"
argh = "0.1.5"
