[package]
name = "beacon"
version = "0.1.0"
authors = ["de Luca <dev@de-luca.io>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
uuid = { version = "1.4", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.5.0", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
tokio-stream = "0.1.1"
futures-util = "0.3"
argh = "0.1.5"
